# techtoolsweb

./: .replit  README.md  SEO_TOOL_PAGES_REPORT.json  SEO_TOOL_PAGES_REPORT.md  api_server.sh  image_to_svg_api.py  package-lock.json  package.json  pdf_tools_api.py  pyproject.toml  qr_code_api.py  run_all.sh  run_pdf_api.py  share_requests.db  start_api_server.py  start_image_to_svg_api.py  start_image_to_svg_api.sh  start_pdf_service.sh  start_pdf_tools_api.py  start_qr_api.sh  test_share_db.py
api_tester/: .google-cookie  README.md  config.py  content_gap_analysis.json  content_gap_analyzer_api.py  contentgap.py  dapa.py  domain_authority_api.py  helper.py  image_to_svg_api.py  instagram_downloader_api.py  keyword_density_checker.py  main.py  main1.py  pageauthority.py  pagespeed.py  pdf_tools_api.py  plagarism.py  prelaunch_audit_api.py  prelaunchaudit.py  qr_code_api.py  readabilitychecker.py  run.py  seo_audit_report.csv  seo_audit_report.json  seoanalysis.py  share_service.py  sitemap_visualizer_api.py  test.py
attached_assets/: Pasted-1-Responsive-Table-Generator-Function-Upload-Excel-CSV-or-paste-tabular-data-output-responsive--1746086984604.txt  Pasted-Got-it-You-re-looking-for-a-conceptual-breakdown-of-how-the-website-should-function-and-look-step--1741593594411.txt  Pasted-Here-is-a-detailed-specification-of-calculator-tools-with-required-inputs-calculations-formulas-an-1745436939848.txt
client/: index.html  tsconfig.json
myenv/: pyvenv.cfg
scripts/: generate-seo-tool-pages.mjs
server/: auth.ts  index.ts  keyword-analyzer.ts  plagiarism-checker.ts  (+7 more)
(+95 files in other folders)
