[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "fitz>=0.0.1.dev2",
    "httpx>=0.28.1",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "pymupdf==1.22.5",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "qrcode>=8.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "shortuuid>=1.0.13",
    "uvicorn>=0.34.2",
]
